samples/_failures_safe/1761498729_c794e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70d64c91.c: In function ‘main’:
./samples/SAFE/__tmp_70d64c91.c:154:17: error: expected expression at end of input
  154 |                 mat2.rows = read_int("Enter number of rows (must equal first matrix columns): ", 1,
      |                 ^~~~
./samples/SAFE/__tmp_70d64c91.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70d64c91.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70d64c91.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70d64c91.c:154:17: error: expected declaration or statement at end of input
